--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
     "react-scripts": "4.0.1",
+    "remark-gfm": "^1.0.0",
     "remark-math": "^4.0.0",
     "web-vitals": "^0.2.4"
   },
